infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/websocket-services: "meetings-srv"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://www.schedulease.cloud"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, OPTIONS"  
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,accesstoken"  # CORS Allow Headers setting
    nginx.ingress.kubernetes.io/cross-origin-opener-policy: "same-origin"
spec:
  rules:
    - host: "server.schedulease.cloud"
      http:
        paths:
          - path: /api/meeting/?(.*)
            pathType: Prefix
            backend:   
              service: 
                name: meetings-srv
                port:
                  number: 3000
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:   
              service: 
                name: user-srv
                port:
                  number: 3000
          - path: /api/notifications/?(.*)
            pathType: Prefix
            backend:     
              service: 
                name: notifications-srv
                port:
                  number: 3000
          - path: /socket.io/?(.*)
            pathType: Prefix
            backend:
              service:
                name: meetings-srv
                port:
                  number: 3000
